# Tweaks and Fixes
- Italian decision 'Build Modern Homes in the South' now checks for the correct state;
- Added some new Italian focus descs;
- Fixed the tooltips for causing the revolution in Italian focus 'Arise, Workers of Italy';