@@ -380,11 +380,13 @@ ITA_leonida_bissolati_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_LEONIDA_BISSOLATI
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_LEONIDA_BISSOLATI
+			}
+			has_country_flag = ITA_AI_RANDOM_LEONIDA_BISSOLATI
 		}
-		#make random
 	}
 	abort = {
 		OR = {
@@ -511,11 +513,13 @@ ITA_romolo_murri_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_ROMOLO_MURRI
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_ROMOLO_MURRI
+			}
+			has_country_flag = ITA_AI_RANDOM_ROMOLO_MURRI
 		}
-		#make random
 	}
 	abort = {
 		OR = {
@@ -641,11 +645,13 @@ ITA_ettore_sacchi_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_RADICALS
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_RADICALS
+			}
+			has_country_flag = ITA_AI_RANDOM_RADICALS
 		}
-		#make random
 	}
 	abort = {
 		OR = {
@@ -769,11 +775,13 @@ ITA_luigi_luzzatti_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_LUIGI_LUZZATTI
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_LUIGI_LUZZATTI
+			}
+			has_country_flag = ITA_AI_RANDOM_LUIGI_LUZZATTI
 		}
-		#make random
 	}
 	abort = {
 		OR = {
@@ -876,11 +884,13 @@ ITA_sidney_sonnino_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_SIDNEY_SONNINO
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_SIDNEY_SONNINO
+			}
+			has_country_flag = ITA_AI_RANDOM_SIDNEY_SONNINO
 		}
-		#make random
 	}
 	abort = {
 		OR = {
@@ -985,11 +995,13 @@ ITA_enrico_corradini_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_ENRICO_CORRADINI
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_ENRICO_CORRADINI
+			}
+			has_country_flag = ITA_AI_RANDOM_ENRICO_CORRADINI
 		}
-		#make random
 	}
 	abort = {
 		has_global_flag = italian_civil_war
@@ -1081,11 +1093,13 @@ ITA_alberto_pollio_plan = {
 		original_tag = ITA
 	}
 	enable = {
-		has_game_rule = {
-			rule = ITA_ai_behavior
-			option = ITA_ALBERTO_POLLIO
+		OR = {
+			has_game_rule = {
+				rule = ITA_ai_behavior
+				option = ITA_ALBERTO_POLLIO
+			}
+			has_country_flag = ITA_AI_RANDOM_ALBERTO_POLLIO
 		}
-		#make random
 	}
 	abort = {
 		has_global_flag = italian_civil_war
