@@ -5351,14 +5351,29 @@
 			ITA = {
 				if = {
 					limit = {
-						has_game_rule = {
-							rule = ITA_ai_behavior
-							option = RANDOM
+						OR = {
+							has_game_rule = {
+								rule = ITA_ai_behavior
+								option = RANDOM
+							}
+							AND = {
+								has_game_rule = {
+									rule = ITA_ai_behavior
+									option = DEFAULT
+								}
+								is_historical_focus_on = no
+							}
 						}
 					}
 					random_list = {
-						60 = { ITA = { set_country_flag = ITA_AI_RANDOM_HISTORICAL } }
-						40 = { ITA = { set_country_flag = ITA_AI_RANDOM_CP } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_HISTORICAL } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_LEONIDA_BISSOLATI } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_ROMOLO_MURRI } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_RADICALS } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_LUIGI_LUZZATTI } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_SIDNEY_SONNINO } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_ENRICO_CORRADINI } }
+						12.5 = { ITA = { set_country_flag = ITA_AI_RANDOM_ALBERTO_POLLIO } }
 					}
 				}
 			}
