@@ -963,7 +963,7 @@ ITA_implement_strict_rationing_desc: ""
 ITA_issue_war_bonds: "Issue War Bonds"
 ITA_issue_war_bonds_desc: ""
 ITA_restrict_the_press: "Restrict the Press"
-ITA_restrict_the_press_desc: ""
+ITA_restrict_the_press_desc: "Some of the press has been against our entry into the Great War, writing news articles criticizing the government and the the war effort. This negative attitude cannot be tolerated while a war is going on, and as such we will use our powers to restrict the press."
 ITA_enforce_social_cohesion: "Enforce Social Cohesion"
 ITA_enforce_social_cohesion_desc: ""
 ITA_war_propaganda: "War Propaganda"
@@ -1046,7 +1046,7 @@ ITA_cut_welfare_programs: "Cut Welfare Programs"
 ITA_cut_welfare_programs_desc: ""
 ITA_supremacy_in_the_balkans: "Supremacy in the Balkans"
 ITA_supremacy_in_the_balkans_desc: ""
-ITA_levrage_our_neutrality: "Leverage Our Neutrality"
+ITA_levrage_our_neutrality: "Leverage our Neutrality"
 ITA_levrage_our_neutrality_desc: ""
 ITA_concessions_for_albanian_invasion: "Concessions For Albanian Violation"
 ITA_eyes_on_east_africa: "Eyes On East Africa"
@@ -1573,6 +1573,7 @@ ITA_when_select_decision_tt: "When £decision_icon_small §YDecision§! is click
 ITA_this_decision_twice: "This £decision_icon_small §YDecision§! can be selected twice."
 ITA_dismantle_potential_business_plots: "Dismantle a Potential Business Plot"
 ITA_shore_up_the_classic_liberals: "The Principles of the Classicalists"
+ITA_shore_up_the_classic_liberals_desc: ""
 ITA_planned_economy.tt: "Modify §YSocial Unrest§! by\n$MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR$: §R-10.00%§!\n$MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR$: §G+10.00%§!\nModify §YFruits of the Reforms§! by\n£construction_speed_texticon Construction Speed: §G+10.00%§!"
 ITA_ban_striking: "Criminalize Striking"
 ITA_no_room_for_dissent: "No Room for Dissent"
@@ -1587,8 +1588,9 @@ ITA_lib_order.tt: "Once all of these decisions are completed:\nModify §YSocial 
 ITA_you_did_it_yay.tt: "Modify §YSocial Unrest§! by\n$communism_drift$: §R-0.01§!"
 ITA_you_did_it_yay.tt_02: "Modify §YSocial Unrest§! by\n$communism_drift$: §R-0.02§!"
 ITA_war_pows: "Utilize War Powers"
-ITA_comprehensive_national_strategy: "Comprehensive National Strategy"
 ITA_war_pows_desc: "During the lead up to our entry into the Great War Parliament passed a piece of legislation granting the government extraordinary powers in the case of a war. Now with the war it is time we put these powers to use for the defense of the nation."
+ITA_comprehensive_national_strategy: "Comprehensive National Strategy"
+ITA_comprehensive_national_strategy_desc: ""
 ITA_fight_malaria_in_apulia: "Fight Malaria in Apulia"
 ITA_fight_malaria_in_basilicata: "Fight Malaria in Basilicata"
 
@@ -1770,8 +1772,10 @@ ITA_modify_profit_thing: "The mission '§YWar Costs§!' will subtract §R1§! mo
 ITA_soc_fire_faster: "The mission §YTiring Socialist Support§! will fire §Y10§! days faster"
 ITA_left_fire_fast: "The mission §YTiring Left Wing Support§! will fire §Y5§! days faster"
 ITA_unify_all_sides: "Grand Coalition Government"
+ITA_unify_all_sides_desc: ""
 ITA_war_powers2: "Coalition Government"
 ITA_union_war_board: "Union Input in the Mobilization Process"
+ITA_union_war_board_desc: ""
 ITA_soc_fire_faster2: "The mission §YTiring Socialist Support§! will fire §Y15§! days faster"
 ITA_rad_fire_faster: "The mission §YTiring Radical Support§! will fire §Y10§! days faster"
 ITA_redistribute_land_in_abruzzo: "Redistribute Land in Abruzzo"
@@ -1989,6 +1993,7 @@ ITA_combos_with_oppose_new_right: "This focus §Ccombos§! with the focus §YOpp
 ITA_combos_with_catholic_rhetoric: "This focus §Ccombos§! with the focus §YAdopt Catholic Rhetoric§!. Completing both focuses will unlock the following:"
 ITA_how_to_get_here_left_coalition_tt: "To get §YLeonida Bissoliti§! as §YGiovanni Giolitti§!'s successor, you have to have the following:"
 ITA_national_syndicalism: "The Corporatist Model"
+ITA_national_syndicalism_desc: ""
 ITA_nationalize_healthcare: "Nationalize Healthcare Providers"
 ITA_how_to_get_salandra_tt: "To get §YAntonio Salandra§! as §YGiovanni Giolitti§!'s successor, you must have the following:"
 ITA_sal_suces: "The king will appoint §YAntonio Salandra§! to form a new government."
@@ -2065,6 +2070,7 @@ ITA_emergency_powers: "Granted Emergency Powers"
 ITA_church_collaboration: "Ties To The Church"
 ITA_tiring_radical_support: "Tiring Radical Support"
 ITA_church_as_tool_of_the_state: "Adopt Catholic Rhetoric"
+ITA_church_as_tool_of_the_state_desc: ""
 ITA_salandra_sucessor: "Should §mGiolitti's§! government fall, he will be succeeded by §2Antonio Salandra§!."
 ITA_nitti_sucessor: "Should §mGiolitti's§! government fall, he will be succeeded by §CFrancesco Saverio Nitti§!."
 ITA_right_swing_support_3: "Up to §Y3§! Members of the §2Right§! will §GStart§! supporting the government."
@@ -2280,6 +2286,7 @@ ITA_true_seperation_of_church_and_state: "Shatter the Power of the Church"
 ITA_true_seperation_of_church_and_state_desc: "Religion is a way to distract the lower classes from the real battle: the class struggle. It's made by the bourgeois to expand their control over the working class. Christianity is the most popular religion in Italy and we must eliminate it by reducing their power."
 ITA_press_writes_pro_centrist_articles1: "Press is Writing Scathing Articles"
 ITA_fight_for_masculinity: "The Restoration of Masculinity"
+ITA_fight_for_masculinity_desc: ""
 ITA_crush_religious_propaganda: "Societal Rejection of Religion"
 ITA_press_writes_pro_centrist_articles2: "Press is Writing Pro Centrist Articles"
 ITA_special_grants_to_collective_farms: "Special Grants to Collectivized Farms"
@@ -2335,6 +2342,7 @@ decision_cost_xp_50_blocked: "£army_experience  §R50§! "
 ITA_nathe_focus.tt: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-10.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.10§!"
 ITA_limited_neoliberalism.tt: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y+5.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §G-0.10§!"
 ITA_war_socialists: "Cultivate Socialist Support for the War"
+ITA_war_socialists_desc: ""
 ITA_encourage_generals_cooperation: "Cooperation of Generals"
 ITA_state_housing_plan.tt: "Modify §YFruits of the Reforms§! by\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!\n£GFX_population_texticon Monthly Population: §G+10.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.05§!"
 ITA_social_welfare.tt2: "Modify §YFruits of the Reforms§! by\n$MODIFIER_STABILITY_FACTOR$: §G+2.50%§!\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-4.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §R+0.05§!"
@@ -2348,6 +2356,7 @@ ITA_admin_focus.tt: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_G
 tgwr_discord_so_funny_tt: "Modify §YSocial Unrest§! by\n$MODIFIER_POLITICAL_POWER_FACTOR$: §R-5%§!\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!\n$communism_drift$: §G+0.02§!"
 ITA_m_soc.tt_no3: "Modify §YSocial Unrest§! by\n$MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR$: §R-5.00%§!\n$MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR$: §R-5.00%§!\n$communism_drift$: §R-0.01§!"
 ITA_shield_soys: "Shield the Population From the Impacts of War"
+ITA_shield_soys_desc: ""
 tgwr_discord_filled_with_wonderful_respecting_people: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$: §R-10.00%§!\n£political_advisor_cost_texticon  Political Advisor Cost: §R+1000%§!\nModify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-10.0%§!\n$MODIFIER_POLITICAL_POWER_COST$: §G-0.20§!"
 ITA_accident_insurance.tt: "Modify §YFruits of the Reforms§! by\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-10.0%§!"
 ITA_reduce_women_work_hours: "Cooperate with CGL"
@@ -2651,6 +2660,7 @@ ITA_science_gold: "Modify §YFruits of the Reforms§! by\n$MODIFIER_RESEARCH_SPE
 ITA_public_pressure: "Rejuvenated Movement"
 blank: "\n\n"
 ITA_oppose_the_new_right: "Oppose the 'New Right'"
+ITA_oppose_the_new_right_desc: ""
 ITA_sway_economic_experts: "Against Anti-Intellectualism"
 ITA_sway_economic_experts_desc: ""
 ITA_flirt_psi: "Modify §YSocial Unrest§! by\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!"
