@@ -1,4 +1,5 @@
 # Tweaks and Fixes
+- Italian AI no longer breaks when historical focuses aren't enabled and ai behaviour is set to default;
 - Italian decision 'Build Modern Homes in the South' now checks for the correct state;
 - Added some new Italian focus descs;
 - Fixed the tooltips for causing the revolution in Italian focus 'Arise, Workers of Italy';
